src/parser/PmmParser.java
// Generated from java-escape by ANTLR 4.11.1
package parser;

    import ast.language.*;
    import ast.expression.*;
    import ast.statement.*;
    import ast.type.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, WS=38, SL_COMMENT=39, 
		ML_COMMENT=40, ID=41, INT_CONSTANT=42, REAL_CONSTANT=43, CHAR_CONSTANT=44;
	public static final int
		RULE_program = 0, RULE_definitions = 1, RULE_main = 2, RULE_definition = 3, 
		RULE_var_definitions = 4, RULE_var_definition = 5, RULE_func_definition = 6, 
		RULE_func_params = 7, RULE_params = 8, RULE_param = 9, RULE_type = 10, 
		RULE_complex_type = 11, RULE_array_type = 12, RULE_dimension = 13, RULE_struct_type = 14, 
		RULE_registers = 15, RULE_register = 16, RULE_simple_type = 17, RULE_statements = 18, 
		RULE_statement = 19, RULE_if_else = 20, RULE_else_statement = 21, RULE_while_loop = 22, 
		RULE_func_invocation = 23, RULE_arguments = 24, RULE_separated_expressions = 25, 
		RULE_expression = 26, RULE_ids = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definitions", "main", "definition", "var_definitions", "var_definition", 
			"func_definition", "func_params", "params", "param", "type", "complex_type", 
			"array_type", "dimension", "struct_type", "registers", "register", "simple_type", 
			"statements", "statement", "if_else", "else_statement", "while_loop", 
			"func_invocation", "arguments", "separated_expressions", "expression", 
			"ids"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'main'", "'('", "')'", "':'", "'{'", "'}'", "';'", "','", 
			"'['", "']'", "'struct'", "'int'", "'char'", "'double'", "'print'", "'input'", 
			"'='", "'return'", "'if'", "'else'", "'while'", "'.'", "'-'", "'!'", 
			"'*'", "'/'", "'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", 
			"'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "WS", "SL_COMMENT", "ML_COMMENT", "ID", "INT_CONSTANT", "REAL_CONSTANT", 
			"CHAR_CONSTANT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> defs = new ArrayList<Definition>();
		public DefinitionsContext definitions;
		public MainContext main;
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			((ProgramContext)_localctx).definitions = definitions();
			setState(57);
			((ProgramContext)_localctx).main = main();
			setState(58);
			match(EOF);
			 ((ProgramContext)_localctx).defs =  ((ProgramContext)_localctx).definitions.ast; _localctx.defs.add(((ProgramContext)_localctx).main.ast); ((ProgramContext)_localctx).ast =  new Program(_localctx.defs, 1, 1); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionsContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public DefinitionContext definition;
		public DefinitionsContext definitions;
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitDefinitions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		try {
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				((DefinitionsContext)_localctx).definition = definition();
				setState(63);
				((DefinitionsContext)_localctx).definitions = definitions();
				 ((DefinitionsContext)_localctx).definitions.ast.addAll(0, ((DefinitionsContext)_localctx).definition.ast); ((DefinitionsContext)_localctx).ast =  ((DefinitionsContext)_localctx).definitions.ast; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public FuncDefinition ast;
		public Token OP;
		public Token NAME;
		public StatementsContext statements;
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			((MainContext)_localctx).OP = match(T__0);
			setState(69);
			((MainContext)_localctx).NAME = match(T__1);
			setState(70);
			match(T__2);
			setState(71);
			match(T__3);
			setState(72);
			match(T__4);
			setState(73);
			match(T__5);
			setState(74);
			((MainContext)_localctx).statements = statements();
			setState(75);
			match(T__6);
			 ((MainContext)_localctx).ast =  new FuncDefinition((((MainContext)_localctx).NAME!=null?((MainContext)_localctx).NAME.getText():null), new FunctionType(new ArrayList<VarDefinition>(), VoidType.getInstance(), ((MainContext)_localctx).NAME.getLine(), ((MainContext)_localctx).NAME.getCharPositionInLine() + 1), ((MainContext)_localctx).statements.ast, ((MainContext)_localctx).OP.getLine(), ((MainContext)_localctx).OP.getCharPositionInLine() + 1); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public Var_definitionContext var_definition;
		public Func_definitionContext func_definition;
		public Var_definitionContext var_definition() {
			return getRuleContext(Var_definitionContext.class,0);
		}
		public Func_definitionContext func_definition() {
			return getRuleContext(Func_definitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definition);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				((DefinitionContext)_localctx).var_definition = var_definition();
				 _localctx.ast.addAll(((DefinitionContext)_localctx).var_definition.ast); 
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				((DefinitionContext)_localctx).func_definition = func_definition();
				 _localctx.ast.add(((DefinitionContext)_localctx).func_definition.ast); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_definitionsContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public Var_definitionContext var_definition;
		public Var_definitionsContext var_definitions;
		public Var_definitionContext var_definition() {
			return getRuleContext(Var_definitionContext.class,0);
		}
		public Var_definitionsContext var_definitions() {
			return getRuleContext(Var_definitionsContext.class,0);
		}
		public Var_definitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_definitions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitVar_definitions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_definitionsContext var_definitions() throws RecognitionException {
		Var_definitionsContext _localctx = new Var_definitionsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var_definitions);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				((Var_definitionsContext)_localctx).var_definition = var_definition();
				setState(88);
				((Var_definitionsContext)_localctx).var_definitions = var_definitions();
				 ((Var_definitionsContext)_localctx).var_definitions.ast.addAll(0, ((Var_definitionsContext)_localctx).var_definition.ast); ((Var_definitionsContext)_localctx).ast =  ((Var_definitionsContext)_localctx).var_definitions.ast; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_definitionContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public IdsContext ids;
		public TypeContext type;
		public IdsContext ids() {
			return getRuleContext(IdsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Var_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitVar_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_definitionContext var_definition() throws RecognitionException {
		Var_definitionContext _localctx = new Var_definitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			((Var_definitionContext)_localctx).ids = ids();
			setState(94);
			match(T__4);
			setState(95);
			((Var_definitionContext)_localctx).type = type();
			setState(96);
			match(T__7);
			 ((Var_definitionContext)_localctx).ids.ast.stream().forEach((id) -> _localctx.ast.add(new VarDefinition(id.name, ((Var_definitionContext)_localctx).type.ast, id.getLine(), id.getColumn()))); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_definitionContext extends ParserRuleContext {
		public FuncDefinition ast;
		public FunctionType functionType;
		public Token OP;
		public Token ID;
		public Func_paramsContext func_params;
		public TypeContext type;
		public StatementsContext statements;
		public TerminalNode ID() { return getToken(PmmParser.ID, 0); }
		public Func_paramsContext func_params() {
			return getRuleContext(Func_paramsContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Func_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitFunc_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_definitionContext func_definition() throws RecognitionException {
		Func_definitionContext _localctx = new Func_definitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_func_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			((Func_definitionContext)_localctx).OP = match(T__0);
			setState(100);
			((Func_definitionContext)_localctx).ID = match(ID);
			setState(101);
			match(T__2);
			setState(102);
			((Func_definitionContext)_localctx).func_params = func_params();
			setState(103);
			match(T__3);
			setState(104);
			match(T__4);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & 62464L) != 0) {
				{
				{
				setState(105);
				((Func_definitionContext)_localctx).type = type();
				}
				 ((Func_definitionContext)_localctx).functionType =  new FunctionType(((Func_definitionContext)_localctx).func_params.ast, ((Func_definitionContext)_localctx).type.ast, ((Func_definitionContext)_localctx).func_params.ast.size() > 0 ? ((Func_definitionContext)_localctx).func_params.ast.get(0).getLine() : ((Func_definitionContext)_localctx).OP.getLine(), ((Func_definitionContext)_localctx).func_params.ast.size() > 0 ? ((Func_definitionContext)_localctx).func_params.ast.get(0).getLine() : ((Func_definitionContext)_localctx).OP.getCharPositionInLine() + 1); 
				}
			}

			{
			 ((Func_definitionContext)_localctx).functionType =  new FunctionType(((Func_definitionContext)_localctx).func_params.ast, VoidType.getInstance(), ((Func_definitionContext)_localctx).func_params.ast.size() > 0 ? ((Func_definitionContext)_localctx).func_params.ast.get(0).getLine() : ((Func_definitionContext)_localctx).OP.getLine(), ((Func_definitionContext)_localctx).func_params.ast.size() > 0 ? ((Func_definitionContext)_localctx).func_params.ast.get(0).getLine() : ((Func_definitionContext)_localctx).OP.getCharPositionInLine() + 1); 
			}
			setState(111);
			match(T__5);
			setState(112);
			((Func_definitionContext)_localctx).statements = statements();
			setState(113);
			match(T__6);
			 ((Func_definitionContext)_localctx).ast =  new FuncDefinition((((Func_definitionContext)_localctx).ID!=null?((Func_definitionContext)_localctx).ID.getText():null), _localctx.functionType, ((Func_definitionContext)_localctx).statements.ast, ((Func_definitionContext)_localctx).OP.getLine(), ((Func_definitionContext)_localctx).OP.getCharPositionInLine() + 1); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_paramsContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<VarDefinition>();
		public ParamsContext params;
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public Func_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_params; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PmmVisitor ) return ((PmmVisitor<? extends T>)visitor).visitFunc_params(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_paramsContext func_params() throws RecognitionException {
		Func_paramsContext _localctx = new Func_paramsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_func_params);
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				((Func_paramsContext)_localctx).params = params();
				 ((Func_paramsContext)_localctx).ast =  ((Func_paramsContext)_localctx).params.ast; 
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
